# rust6502

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: Makefile  bios.cfg  count_up  count_up.s  fizz_buzz  fizz_buzz.s  hello_world  hello_world.s  makec.sh  print  print.c  print.s  xy_index_test  xy_index_test.asm  xy_index_test.s
examples/wozmon/: Makefile  bios.cfg  wozmon  wozmon.s
src/: cpu6502.rs  main.rs
src/cpu6502/: memory.rs  operation.rs  pause.rs  status_reg.rs
src/utils/: pause.rs
