[package]
name = "rust6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.1"
log = "0.4.20"
termion = "3.0.0"
